# solitair

./: CMakeLists.txt  cards.h  cards.h.gch  cardutils.h  main.c  mapperutils.h  mau.c  mau.h  models.c  models.h  models.h.gch  osmosis  osmosis.c  printer.h  printutils.h  utils.h
_old/: cards.h  mapperutils.h.gch  osmosis.c  utils.h
lib/card/: card.c  card.h
lib/deck/: deck.c  deck.h
lib/discard_pile/: discard_pile.c  discard_pile.h
lib/foundation/: foundation.c  foundation.h
lib/osmosis/: osmosis.c  osmosis.h
lib/pile/: pile.c  pile.h
lib/stock/: stock.c  stock.h
lib/utils/: mapperutils.h  printer.h
